--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -135,18 +135,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "nomiden",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.8"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2f61b8c95c80ab26de210094379ff772a59c30b16ab5fabd17bd817aa5edde7a"
+    "hash": "ee81c946c1cf52c76ee09fcf69ca378c40131232dfcbdfa105acdcb701ec7bca"
    }
   }
  },
