Add KK to example.ipynb

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### Retreive NIK (Nomor Induk Kependudukan) information\n",
     "\n",
-    "First you will need to make a NIK class by passing the NIK number as a parameter. NIK number can have the type `str` and `int`."
+    "First you will need to make a NIK object by passing the NIK number as an input parameter. NIK number can have the type `str` or `int`."
    ]
   },
   {
@@ -84,34 +84,107 @@
    "outputs": [],
    "source": [
     "# Get province\n",
-    "id_nik.province\n",
-    "\n",
+    "id_nik.province"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get city\n",
-    "id_nik.city\n",
-    "\n",
+    "id_nik.city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get district\n",
-    "id_nik.district\n",
-    "\n",
+    "id_nik.district"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get gender\n",
-    "id_nik.gender\n",
-    "\n",
+    "id_nik.gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get birth date (date of the month)\n",
-    "id_nik.birthdate\n",
-    "\n",
+    "id_nik.birthdate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get birth month \n",
-    "id_nik.birthmonth\n",
-    "\n",
+    "id_nik.birthmonth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get birth year\n",
-    "id_nik.birthyear\n",
-    "\n",
+    "id_nik.birthyear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get birth datetime\n",
-    "id_nik.birthdtm\n",
-    "\n",
+    "id_nik.birthdtm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get complete birthday as a string\n",
-    "id_nik.birthday\n",
-    "\n",
+    "id_nik.birthday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get age\n",
     "id_nik.age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get registration code\n",
+    "id_nik.nth_person"
    ]
   },
   {
@@ -119,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or you can also get all informations in a dictionary"
+    "Or you can also get all informations as a dictionary"
    ]
   },
   {
@@ -130,6 +203,146 @@
    "source": [
     "# Get all informations\n",
     "id_nik.all_info"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retreive KK (Kartu Keluarga) information\n",
+    "\n",
+    "Similar to NIK, you will need to make a KK object by passing the KK number as an input parameter. KK number can have the type `str` or `int`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# int NIK number\n",
+    "id_kk = nr.KK(1111111111111111)\n",
+    "\n",
+    "# str NIK number\n",
+    "id_kk = nr.KK(\"1111111111111111\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, you can retreive individual informations by calling its attributes. \n",
+    "\n",
+    "> **Note**: KK number does not contain gender and age information, since it is a family ID number, not a personal one. KK also does not contain any birth information, but it does contain registration informations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get province\n",
+    "id_kk.province"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get city\n",
+    "id_kk.city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get district\n",
+    "id_kk.district"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get registration date (date of the month)\n",
+    "id_kk.regdate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get registration month \n",
+    "id_kk.regmonth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get registration year\n",
+    "id_kk.regyear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get registration datetime\n",
+    "id_kk.regdtm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get complete registration day as a string\n",
+    "id_kk.regday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get registration code\n",
+    "id_kk.nth_pub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or you can also get all informations as a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all informations\n",
+    "id_kk.all_info"
    ]
   }
  ],
