--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -344,6 +344,59 @@
     "# Get all informations\n",
     "id_kk.all_info"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making a dataframe\n",
+    "\n",
+    "Since `.all_info` attribute returns a dictionary, you can convert it into Pandas DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "nik_list = [\"1111111111111111\", \"1111111111111112\"]\n",
+    "info_list = []\n",
+    "\n",
+    "for nik in nik_list:\n",
+    "    id_nik = nr.NIK(nik)\n",
+    "    info_list.append(id_nik.all_info)\n",
+    "\n",
+    "df = pd.DataFrame.from_dict(info_list)\n",
+    "df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Usage for Pandas Series input\n",
+    "\n",
+    "If you have a Series of IDs you would like to retrieve information from, you can use Pandas' `.apply()` method along with `lambda` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a dummy DataFrame\n",
+    "df = pd.DataFrame({'id_nik': nik_list})\n",
+    "\n",
+    "# Get province and save it to a new column\n",
+    "df['prov'] = df['idnum'].apply(lambda x: nr.NIK(x).province)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
@@ -353,7 +406,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.8"
   },
   "orig_nbformat": 4,
