--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -344,6 +344,35 @@
     "# Get all informations\n",
     "id_kk.all_info"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making a dataframe\n",
+    "\n",
+    "Since `.all_info` attribute returns a dictionary, you can convert it into Pandas DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "nik_list = [\"1111111111111111\", \"1111111111111112\"]\n",
+    "info_list = []\n",
+    "\n",
+    "for nik in nik_list:\n",
+    "    id_nik = nr.NIK(nik)\n",
+    "    info_list.append(id_nik.all_info)\n",
+    "\n",
+    "df = pd.DataFrame.from_dict(info_list)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
