Correct typo in example.ipynb

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -373,6 +373,30 @@
     "df = pd.DataFrame.from_dict(info_list)\n",
     "df"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Usage for Pandas Series input\n",
+    "\n",
+    "If you have a Series of IDs you would like to retrieve information from, you can use Pandas' `.apply()` method along with `lambda` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a dummy DataFrame\n",
+    "df = pd.DataFrame({'id_nik': nik_list})\n",
+    "\n",
+    "# Get province and save it to a new column\n",
+    "df['prov'] = df['id_nik'].apply(lambda x: nr.NIK(x).province)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
