docs: tidy up markdown narrations

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -378,7 +378,7 @@
    "source": [
     "#### Making a DataFrame from a Series input\n",
     "\n",
-    "Since .all_info attribute returns a dictionary, you can convert it into Pandas DataFrame."
+    "Since `.all_info` attribute returns a dictionary, you can convert it into Pandas DataFrame."
    ]
   },
   {
